--- a/index.html
+++ b/index.html
@@ -63,7 +63,21 @@
         <div class="container">
             <ul class="menu">
                 <li class="menu__list"><a href="#" class="menu__link"></a>Home</li>
-                <li class="menu__list"><a href="#" class="menu__link"></a>Man</li>
+                <li class="menu__list"><a href="#" class="menu__link"></a>Men
+                    <div class="mega__box">
+                        <div class="mega__box__list">
+                            <h3 class="mega__box__heading">men</h3>
+                            <a class="mega__box__item" href="#">Dresses</a>
+                            <a class="mega__box__item" href="#">Tops</a>
+                            <a class="mega__box__item" href="#">Sweaters/Knits</a>
+                            <a class="mega__box__item" href="#">Jackets/Coats</a>
+                            <a class="mega__box__item" href="#">Blazers</a>
+                            <a class="mega__box__item" href="#">Denim</a>
+                            <a class="mega__box__item" href="#">Leggings/Pants</a>
+                            <a class="mega__box__item" href="#">Skirts/Shorts</a>
+                        </div>
+                    </div>
+                </li>
                 <li class="menu__list"><a href="#" class="menu__link"></a>Women</li>
                 <li class="menu__list"><a href="#" class="menu__link"></a>Kids</li>
                 <li class="menu__list"><a href="#" class="menu__link"></a>Accoseriese</li>
@@ -117,30 +131,44 @@
                 <div class="cards__product">
                     <img class="cards__product__item" src="./build/img/card1.png" alt="card">
                     <p class="cards__product__text">Mango People T-shirt</p>
-                    <p class="cards__product__text">$50.00</p>
+                    <p class="cards__product__text__red">$50.00</p>
                 </div>
                 <div class="cards__product">
                     <img class="cards__product__item" src="./build/img/card2.png" alt="card">
+                    <p class="cards__product__text">Mango People T-shirt</p>
+                    <p class="cards__product__text__red">$50.00</p>
                 </div>
                 <div class="cards__product">
                     <img class="cards__product__item" src="./build/img/card3.png" alt="card">
+                    <p class="cards__product__text">Mango People T-shirt</p>
+                    <p class="cards__product__text__red">$50.00</p>
                 </div>
                 <div class="cards__product">
                     <img class="cards__product__item" src="./build/img/card4.png" alt="card">
+                    <p class="cards__product__text">Mango People T-shirt</p>
+                    <p class="cards__product__text__red">$50.00</p>
                 </div>
             </div>
             <div class="cards__down">
                 <div class="cards__product">
                     <img class="cards__product__item" src="./build/img/card5.png" alt="card">
+                    <p class="cards__product__text">Mango People T-shirt</p>
+                    <p class="cards__product__text__red">$50.00</p>
                 </div>
                 <div class="cards__product">
                     <img class="cards__product__item" src="./build/img/card6.png" alt="card">
+                    <p class="cards__product__text">Mango People T-shirt</p>
+                    <p class="cards__product__text__red">$50.00</p>
                 </div>
                 <div class="cards__product">
                     <img class="cards__product__item" src="./build/img/card7.png" alt="card">
+                    <p class="cards__product__text">Mango People T-shirt</p>
+                    <p class="cards__product__text__red">$50.00</p>
                 </div>
                 <div class="cards__product">
                     <img class="cards__product__item" src="./build/img/card8.png" alt="card">
+                    <p class="cards__product__text">Mango People T-shirt</p>
+                    <p class="cards__product__text__red">$50.00</p>
                 </div>
             </div>
             <!-- </div> -->
