--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
                     </details>
                     <input class="header__text" type=search placeholder="Search for Item...">
-                    <button class="button__search">&#128269</button>
+                    <button class="button__search"><img class="button__lens" src="./build/img/lens.png" alt="lens">
+                    </button>
                 </form>
             </div>
             <div class="header__right">
@@ -126,11 +127,11 @@
                 <h2 class="cards__heading">Fetured Items</h2>
                 <p class="cards__paragraph">Shop for items based on what we featured in this week</p>
             </div>
-            <!-- <div class="cards__content"> -->
             <div class="cards__up">
                 <div class="cards__product">
                     <img class="cards__product__item" src="./build/img/card1.png" alt="card">
-                    <p class="cards__product__text">Mango People T-shirt</p>
+                    <p class="cards__product__text">Mango People T-shirt</>
+                    </p>
                     <p class="cards__product__text__red">$50.00</p>
                 </div>
                 <div class="cards__product">
@@ -171,10 +172,61 @@
                     <p class="cards__product__text__red">$50.00</p>
                 </div>
             </div>
-            <!-- </div> -->
         </div>
-
     </section>
+    <div class="container button__product">
+        <button class="button__product__text">
+            <details>
+                <summary class="button__product__sum">Browse All Product</summary>
+            </details>
+        </button>
+    </div>
+    <section class="bigbanner">
+        <div class="container bigbanner__item">
+            <div class="bigbanner__left">
+                <img src="./build/img/bigbanner.png" alt="banner">
+            </div>
+            <div class="bigbanner__right">
+                <div class="bigbanner__right__content">
+                    <img class="bigbanner__right__img" src="./build/img/del.png" alt="delivery">
+                    <div class="bigbanner__right__text">
+                        <p class="bigbanner__right__head">Free Delivery</p>
+                        <p class="bigbanner__right__paragraph">Worldwide delivery on all. Authorit tively
+                            morph
+                            next-generation innov tion with extensive
+                            models.</p>
+                    </div>
+
+                </div>
+                <div class="bigbanner__right__content">
+                    <img class="bigbanner__right__img" src="./build/img/sales.png" alt="sales">
+                    <div class="bigbanner__right__text">
+                        <p class="bigbanner__right__head">Sales & discounts</p>
+                        <p class="bigbanner__right__paragraph">Worldwide delivery on all. Authorit tively
+                            morph
+                            next-generation innov tion with extensive
+                            models.</p>
+                    </div>
+                </div>
+                <div class="bigbanner__right__content">
+                    <img class="bigbanner__right__img" src="./build/img/crown.png" alt="crown">
+                    <div class="bigbanner__right__text">
+                        <p class="bigbanner__right__head">Quality assurance</p>
+                        <p class="bigbanner__right__paragraph">Worldwide delivery on all. Authorit tively
+                            morph
+                            next-generation innov tion with extensive
+                            models.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="feedback">
+        <div class="container feedback__item">
+
+        </div>
+    </section>
+
 </body>
 
 </html>
