created a new branc

--- a/index.html
+++ b/index.html
@@ -77,6 +77,28 @@
                             <a class="mega__box__link" href="#">Leggings/Pants</a>
                             <a class="mega__box__link" href="#">Skirts/Shorts</a>
                         </div>
+                        <div class="mega__box__item">
+                            <h3 class="mega__box__heading">men</h3>
+                            <a class="mega__box__link" href="#">Dresses</a>
+                            <a class="mega__box__link" href="#">Tops</a>
+                            <a class="mega__box__link" href="#">Sweaters/Knits</a>
+                            <a class="mega__box__link" href="#">Jackets/Coats</a>
+                            <a class="mega__box__link" href="#">Blazers</a>
+                            <a class="mega__box__link" href="#">Denim</a>
+                            <a class="mega__box__link" href="#">Leggings/Pants</a>
+                            <a class="mega__box__link" href="#">Skirts/Shorts</a>
+                        </div>
+                        <div class="mega__box__item">
+                            <h3 class="mega__box__heading">men</h3>
+                            <a class="mega__box__link" href="#">Dresses</a>
+                            <a class="mega__box__link" href="#">Tops</a>
+                            <a class="mega__box__link" href="#">Sweaters/Knits</a>
+                            <a class="mega__box__link" href="#">Jackets/Coats</a>
+                            <a class="mega__box__link" href="#">Blazers</a>
+                            <a class="mega__box__link" href="#">Denim</a>
+                            <a class="mega__box__link" href="#">Leggings/Pants</a>
+                            <a class="mega__box__link" href="#">Skirts/Shorts</a>
+                        </div>
                     </div>
                 </li>
                 <li class="menu__list"><a href="#" class="menu__link"></a>Women</li>
