--- a/index.html
+++ b/index.html
@@ -102,9 +102,81 @@
                     </div>
                 </li>
                 <li class="menu__list"><a href="#" class="menu__link"></a>Women</li>
-                <li class="menu__list"><a href="#" class="menu__link"></a>Kids</li>
+                <li class="menu__list"><a href="#" class="menu__link"></a>Kids
+                    <div class="mega__box">
+                        <div class="mega__box__item">
+                            <h3 class="mega__box__heading">men</h3>
+                            <a class="mega__box__link" href="#">Dresses</a>
+                            <a class="mega__box__link" href="#">Tops</a>
+                            <a class="mega__box__link" href="#">Sweaters/Knits</a>
+                            <a class="mega__box__link" href="#">Jackets/Coats</a>
+                            <a class="mega__box__link" href="#">Blazers</a>
+                            <a class="mega__box__link" href="#">Denim</a>
+                            <a class="mega__box__link" href="#">Leggings/Pants</a>
+                            <a class="mega__box__link" href="#">Skirts/Shorts</a>
+                        </div>
+                        <div class="mega__box__item">
+                            <h3 class="mega__box__heading">men</h3>
+                            <a class="mega__box__link" href="#">Dresses</a>
+                            <a class="mega__box__link" href="#">Tops</a>
+                            <a class="mega__box__link" href="#">Sweaters/Knits</a>
+                            <a class="mega__box__link" href="#">Jackets/Coats</a>
+                            <a class="mega__box__link" href="#">Blazers</a>
+                            <a class="mega__box__link" href="#">Denim</a>
+                            <a class="mega__box__link" href="#">Leggings/Pants</a>
+                            <a class="mega__box__link" href="#">Skirts/Shorts</a>
+                        </div>
+                        <div class="mega__box__item">
+                            <h3 class="mega__box__heading">men</h3>
+                            <a class="mega__box__link" href="#">Dresses</a>
+                            <a class="mega__box__link" href="#">Tops</a>
+                            <a class="mega__box__link" href="#">Sweaters/Knits</a>
+                            <a class="mega__box__link" href="#">Jackets/Coats</a>
+                            <a class="mega__box__link" href="#">Blazers</a>
+                            <a class="mega__box__link" href="#">Denim</a>
+                            <a class="mega__box__link" href="#">Leggings/Pants</a>
+                            <a class="mega__box__link" href="#">Skirts/Shorts</a>
+                        </div>
+                    </div>
+                </li>
                 <li class="menu__list"><a href="#" class="menu__link"></a>Accoseriese</li>
-                <li class="menu__list"><a href="#" class="menu__link"></a>Featured</li>
+                <li class="menu__list menu__list__last"><a href="#" class="menu__link"></a>Featured
+                    <div class="mega__box">
+                        <div class="mega__box__item">
+                            <h3 class="mega__box__heading">men</h3>
+                            <a class="mega__box__link" href="#">Dresses</a>
+                            <a class="mega__box__link" href="#">Tops</a>
+                            <a class="mega__box__link" href="#">Sweaters/Knits</a>
+                            <a class="mega__box__link" href="#">Jackets/Coats</a>
+                            <a class="mega__box__link" href="#">Blazers</a>
+                            <a class="mega__box__link" href="#">Denim</a>
+                            <a class="mega__box__link" href="#">Leggings/Pants</a>
+                            <a class="mega__box__link" href="#">Skirts/Shorts</a>
+                        </div>
+                        <div class="mega__box__item">
+                            <h3 class="mega__box__heading">men</h3>
+                            <a class="mega__box__link" href="#">Dresses</a>
+                            <a class="mega__box__link" href="#">Tops</a>
+                            <a class="mega__box__link" href="#">Sweaters/Knits</a>
+                            <a class="mega__box__link" href="#">Jackets/Coats</a>
+                            <a class="mega__box__link" href="#">Blazers</a>
+                            <a class="mega__box__link" href="#">Denim</a>
+                            <a class="mega__box__link" href="#">Leggings/Pants</a>
+                            <a class="mega__box__link" href="#">Skirts/Shorts</a>
+                        </div>
+                        <div class="mega__box__item">
+                            <h3 class="mega__box__heading">men</h3>
+                            <a class="mega__box__link" href="#">Dresses</a>
+                            <a class="mega__box__link" href="#">Tops</a>
+                            <a class="mega__box__link" href="#">Sweaters/Knits</a>
+                            <a class="mega__box__link" href="#">Jackets/Coats</a>
+                            <a class="mega__box__link" href="#">Blazers</a>
+                            <a class="mega__box__link" href="#">Denim</a>
+                            <a class="mega__box__link" href="#">Leggings/Pants</a>
+                            <a class="mega__box__link" href="#">Skirts/Shorts</a>
+                        </div>
+                    </div>
+                </li>
                 <li class="menu__list"><a href="#" class="menu__link"></a>Hot Deals</li>
             </ul>
         </div>
@@ -143,59 +215,136 @@
             </div>
         </div>
     </section>
+
     <section class="cards">
-        <div class="container cards__list">
-            <div class="cards__head">
-                <h2 class="cards__heading">Fetured Items</h2>
-                <p class="cards__paragraph">Shop for items based on what we featured in this week</p>
-            </div>
-            <div class="cards__up">
-                <div class="cards__product">
-                    <img class="cards__product__item" src="./build/img/card1.png" alt="card">
-                    <p class="cards__product__text">Mango People T-shirt</>
-                    </p>
-                    <p class="cards__product__text__red">$50.00</p>
+        <div class="container">
+            <h2 class="cards__heading">Fetured Items</h2>
+            <p class="cards__paragraph">Shop for items based on what we featured in this week</p>
+            <div class="cards__list">
+                <div class="cards__item">
+                    <a class="cards__link" href="#">
+                        <img class="cards__img" src="./build/img/card1.png" alt="card">
+                        <div class="cards__price">
+                            <p class="cards__text">Mango People T-shirt</p>
+                            <p class="cards__text__red">$50.00</p>
+                        </div>
+                    </a>
+                    <div class="cards__add">
+                        <a class="cards__add__link" href="#">
+                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                            <p class="cards__add__text">Add to Cart</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="cards__product">
-                    <img class="cards__product__item" src="./build/img/card2.png" alt="card">
-                    <p class="cards__product__text">Mango People T-shirt</p>
-                    <p class="cards__product__text__red">$50.00</p>
+                <div class="cards__item">
+                    <a class="cards__link" href="#">
+                        <img class="cards__img" src="./build/img/card2.png" alt="card">
+                        <div class="cards__price">
+                            <p class="cards__text">Mango People T-shirt</p>
+                            <p class="cards__text__red">$50.00</p>
+                        </div>
+                    </a>
+                    <div class="cards__add">
+                        <a class="cards__add__link" href="#">
+                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                            <p class="cards__add__text">Add to Cart</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="cards__product">
-                    <img class="cards__product__item" src="./build/img/card3.png" alt="card">
-                    <p class="cards__product__text">Mango People T-shirt</p>
-                    <p class="cards__product__text__red">$50.00</p>
+                <div class="cards__item">
+                    <a class="cards__link" href="#">
+                        <img class="cards__img" src="./build/img/card3.png" alt="card">
+                        <div class="cards__price">
+                            <p class="cards__text">Mango People T-shirt</p>
+                            <p class="cards__text__red">$50.00</p>
+                        </div>
+                    </a>
+                    <div class="cards__add">
+                        <a class="cards__add__link" href="#">
+                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                            <p class="cards__add__text">Add to Cart</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="cards__product">
-                    <img class="cards__product__item" src="./build/img/card4.png" alt="card">
-                    <p class="cards__product__text">Mango People T-shirt</p>
-                    <p class="cards__product__text__red">$50.00</p>
+                <div class="cards__item">
+                    <a class="cards__link" href="#">
+                        <img class="cards__img" src="./build/img/card4.png" alt="card">
+                        <div class="cards__price">
+                            <p class="cards__text">Mango People T-shirt</p>
+                            <p class="cards__text__red">$50.00</p>
+                        </div>
+                    </a>
+                    <div class="cards__add">
+                        <a class="cards__add__link" href="#">
+                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                            <p class="cards__add__text">Add to Cart</p>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="cards__down">
-                <div class="cards__product">
-                    <img class="cards__product__item" src="./build/img/card5.png" alt="card">
-                    <p class="cards__product__text">Mango People T-shirt</p>
-                    <p class="cards__product__text__red">$50.00</p>
+                <div class="cards__item">
+                    <a class="cards__link" href="#">
+                        <img class="cards__img" src="./build/img/card5.png" alt="card">
+                        <div class="cards__price">
+                            <p class="cards__text">Mango People T-shirt</p>
+                            <p class="cards__text__red">$50.00</p>
+                        </div>
+                    </a>
+                    <div class="cards__add">
+                        <a class="cards__add__link" href="#">
+                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                            <p class="cards__add__text">Add to Cart</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="cards__product">
-                    <img class="cards__product__item" src="./build/img/card6.png" alt="card">
-                    <p class="cards__product__text">Mango People T-shirt</p>
-                    <p class="cards__product__text__red">$50.00</p>
+                <div class="cards__item">
+                    <a class="cards__link" href="#">
+                        <img class="cards__img" src="./build/img/card6.png" alt="card">
+                        <div class="cards__price">
+                            <p class="cards__text">Mango People T-shirt</p>
+                            <p class="cards__text__red">$50.00</p>
+                        </div>
+                    </a>
+                    <div class="cards__add">
+                        <a class="cards__add__link" href="#">
+                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                            <p class="cards__add__text">Add to Cart</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="cards__product">
-                    <img class="cards__product__item" src="./build/img/card7.png" alt="card">
-                    <p class="cards__product__text">Mango People T-shirt</p>
-                    <p class="cards__product__text__red">$50.00</p>
+                <div class="cards__item">
+                    <a class="cards__link" href="#">
+                        <img class="cards__img" src="./build/img/card7.png" alt="card">
+                        <div class="cards__price">
+                            <p class="cards__text">Mango People T-shirt</p>
+                            <p class="cards__text__red">$50.00</p>
+                        </div>
+                    </a>
+                    <div class="cards__add">
+                        <a class="cards__add__link" href="#">
+                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                            <p class="cards__add__text">Add to Cart</p>
+                        </a>
+                    </div>
                 </div>
-                <div class="cards__product">
-                    <img class="cards__product__item" src="./build/img/card8.png" alt="card">
-                    <p class="cards__product__text">Mango People T-shirt</p>
-                    <p class="cards__product__text__red">$50.00</p>
+                <div class="cards__item">
+                    <a class="cards__link" href="#">
+                        <img class="cards__img" src="./build/img/card8.png" alt="card">
+                        <div class="cards__price">
+                            <p class="cards__text">Mango People T-shirt</p>
+                            <p class="cards__text__red">$50.00</p>
+                        </div>
+                    </a>
+                    <div class="cards__add">
+                        <a class="cards__add__link" href="#">
+                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                            <p class="cards__add__text">Add to Cart</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
     <div class="container button__product">
         <button class="button__product__text">
             <details>
@@ -203,6 +352,7 @@
             </details>
         </button>
     </div>
+
     <section class="bigbanner">
         <div class="container bigbanner__item">
             <div class="bigbanner__left">
