--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="yandex-verification" content="8928b30dc5cdd229" />
-    <title></title>
+    <title>Shop</title>
     <link rel="stylesheet" href="build/css/style.css">
     <link rel="shortcut icon" href="build/img/favicon.ico" type="image/x-icon">
     <title>lesson_1_1</title>
@@ -45,10 +44,10 @@
                             <a class="dropdown__menu__item" href="#">Blazers</a>
                             <a class="dropdown__menu__item" href="#">Jackets/vests</a>
                         </div>
-
                     </details>
                     <input class="header__text" type=search placeholder="Search for Item...">
-                    <button class="button__search"><img class="button__lens" src="./build/img/lens.png" alt="lens">
+                    <button class="button__search"><img class="button__lens" src="./build/img/search-solid.svg"
+                            alt="search">
                     </button>
                 </form>
             </div>
@@ -368,7 +367,6 @@
                             next-generation innov tion with extensive
                             models.</p>
                     </div>
-
                 </div>
                 <div class="bigbanner__right__content">
                     <img class="bigbanner__right__img" src="./build/img/sales.png" alt="sales">
@@ -393,11 +391,85 @@
             </div>
         </div>
     </section>
+
     <section class="feedback">
         <div class="container feedback__item">
+            <div class="feedback__left">
+                <figure class="feedback__comment">
+                    <img class="feedback__img" src="./build/img/face.png" alt="face">
+                    <figcaption class="feedback__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                        a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”</figcaption>
+                </figure>
+            </div>
+            <div class="feedback__form">
+                <p class="feedback__form__heading">Subscribe</p>
+                <p class="feedback__form__text">FOR OUR NEWLETTER AND PROMOTION</p>
+                <form class="feedback__form__all" action="#">
+                    <input class="feedback__form__mail" type="text" name="email" placeholder="Enter Your Email">
+                    <button class="feedback__form__button">Subscribe</button>
+                </form>
 
+            </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="container footer__list">
+            <div class="footer__list1">
+                <div class="footer__item">
+                    <div class="footer__item__logo">
+                        <a class="" href="#"><img src="./build/img/logo.png" alt="logo"></a>
+                        <a class="logo__text" href="#">BRAN<span class="other-color">D</span></a>
+                    </div>
+                    <p class="footer__item__text">Objectively transition extensive data rather than cross functional
+                        solutions. Monotonectally
+                        syndicate
+                        multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array
+                        of
+                        processes and cross-unit partnerships. </p>
+                    <p class="footer__item__text">Efficiently plagiarize 24/365 action items and focused infomediaries.
+                        Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
+                </div>
+            </div>
+            <div class="footer__list2">
+                <div class="footer__item">
+                    <h3 class="footer__heading">company</h3>
+                    <a class="footer__link" href="#">home</a>
+                    <a class="footer__link" href="#">shop</a>
+                    <a class="footer__link" href="#">about</a>
+                    <a class="footer__link" href="#">how it works</a>
+                    <a class="footer__link" href="#">contact</a>
+                </div>
+            </div>
+            <div class="footer__list3">
+                <div class="footer__item">
+                    <h3 class="footer__heading">information</h3>
+                    <a class="footer__link" href="#">tearms & condition</a>
+                    <a class="footer__link" href="#">privacy police</a>
+                    <a class="footer__link" href="#">how to buy</a>
+                    <a class="footer__link" href="#">how to sell</a>
+                    <a class="footer__link" href="#">promotion</a>
+                </div>
+            </div>
+            <div class="footer__list4">
+                <div class="footer__item">
+                    <h3 class="footer__heading">shop category</h3>
+                    <a class="footer__link" href="#">men</a>
+                    <a class="footer__link" href="#">women</a>
+                    <a class="footer__link" href="#">child</a>
+                    <a class="footer__link" href="#">apparel</a>
+                    <a class="footer__link" href="#">brows all</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__finish">
+            <div class="container">
+                <div class="footer__social">
+
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
