--- a/index.html
+++ b/index.html
@@ -394,13 +394,16 @@
 
     <section class="feedback">
         <div class="container feedback__item">
-            <div class="feedback__left">
-                <figure class="feedback__comment">
-                    <img class="feedback__img" src="./build/img/face.png" alt="face">
-                    <figcaption class="feedback__text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi,
-                        a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”</figcaption>
-                </figure>
-            </div>
+            <figure class="feedback__left">
+                <!-- <figure class="feedback__comment"> -->
+                <img class="feedback__grid__img" src="./build/img/face.png" alt="face">
+                <figcaption class="feedback__grid__text">“Vestibulum quis porttitor dui! Quisque viverra nunc
+                    mi,
+                    a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”</figcaption>
+                <figcaption class="feedback__grid__sing1">Bin Burhan</figcaption>
+                <figcaption class="feedback__grid__sing2">Dhaka, Bd</figcaption>
+                <!-- </figure> -->
+            </figure>
             <div class="feedback__form">
                 <p class="feedback__form__heading">Subscribe</p>
                 <p class="feedback__form__text">FOR OUR NEWLETTER AND PROMOTION</p>
