--- a/index.html
+++ b/index.html
@@ -395,14 +395,12 @@
     <section class="feedback">
         <div class="container feedback__item">
             <figure class="feedback__left">
-                <!-- <figure class="feedback__comment"> -->
                 <img class="feedback__grid__img" src="./build/img/face.png" alt="face">
                 <figcaption class="feedback__grid__text">“Vestibulum quis porttitor dui! Quisque viverra nunc
                     mi,
                     a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”</figcaption>
                 <figcaption class="feedback__grid__sing1">Bin Burhan</figcaption>
                 <figcaption class="feedback__grid__sing2">Dhaka, Bd</figcaption>
-                <!-- </figure> -->
             </figure>
             <div class="feedback__form">
                 <p class="feedback__form__heading">Subscribe</p>
@@ -466,9 +464,20 @@
             </div>
         </div>
         <div class="footer__finish">
-            <div class="container">
-                <div class="footer__social">
+            <div class="container footer__finish__one">
+                <div class="footer__finish__social">
 
+
+                    <p class="footer__finish__social__left">
+                        © 2017 Brand All Rights Reserved.
+                    </p>
+
+                    <a href="#" class="footer__finish__social__link"><img src="build/img/facebook.png"
+                            alt="facebook"></a>
+                    <a href="#" class="footer__finish__social__link"><img src="build/img/twit.png" alt="twitter"></a>
+                    <a href="#" class="footer__finish__social__link"><img src="build/img/in.png" alt=""></a>
+                    <a href="#" class="footer__finish__social__link"><img src="build/img/print.png" alt=""></a>
+                    <a href="#" class="footer__finish__social__link"><img src="build/img/google.png" alt=""></a>
                 </div>
             </div>
         </div>
