--- a/index.html
+++ b/index.html
@@ -193,23 +193,32 @@
         <div class="container promo__list">
             <div class="promo__left">
                 <div class="promo__card">
-                    <img class="promo__photo1" src="./build/img/promo_1.png" alt="photo">
-                    <p class="promo__hot">HOT DEAL <span class="promo__formen">FOR MEN</span></p>
+                    <a href="product.html">
+                        <img class="promo__photo1" src="./build/img/promo_1.png" alt="photo">
+                        <p class="promo__hot">HOT DEAL <span class="promo__formen">FOR MEN</span></p>
+                    </a>
                 </div>
                 <div class="promo__card">
-                    <img class="promo__photo2" src="./build/img/promo_2.png" alt="photo">
-                    <p class="promo__hot promo__trendy">LUXIROUS & TRENDY <span class="promo__formen">ACCESORIES</span>
-                    </p>
+                    <a href="product.html">
+                        <img class="promo__photo2" src="./build/img/promo_2.png" alt="photo">
+                        <p class="promo__hot promo__trendy">LUXIROUS & TRENDY <span
+                                class="promo__formen">ACCESORIES</span>
+                        </p>
+                    </a>
                 </div>
             </div>
             <div class="promo__right">
                 <div class="promo__card">
-                    <img class="promo__photo3" src="./build/img/promo_3.png" alt="photo">
-                    <p class="promo__hot promo__forwomen">30% offer <span class="promo__formen">women</span></p>
+                    <a href="product.html">
+                        <img class="promo__photo3" src="./build/img/promo_3.png" alt="photo">
+                        <p class="promo__hot promo__forwomen">30% offer <span class="promo__formen">women</span></p>
+                    </a>
                 </div>
                 <div class="promo__card">
-                    <img class="promo__photo4" src="./build/img/promo_4.png" alt="photo">
-                    <p class="promo__hot promo__new">new arrivals <span class="promo__formen">FOR kids</span></p>
+                    <a href="product.html">
+                        <img class="promo__photo4" src="./build/img/promo_4.png" alt="photo">
+                        <p class="promo__hot promo__new">new arrivals <span class="promo__formen">FOR kids</span></p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -221,7 +230,7 @@
             <p class="cards__paragraph">Shop for items based on what we featured in this week</p>
             <div class="cards__list">
                 <div class="cards__item">
-                    <a class="cards__link" href="#">
+                    <a class="cards__link" href="product.html">
                         <img class="cards__img" src="./build/img/card1.png" alt="card">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
@@ -236,7 +245,7 @@
                     </div>
                 </div>
                 <div class="cards__item">
-                    <a class="cards__link" href="#">
+                    <a class="cards__link" href="product.html">
                         <img class="cards__img" src="./build/img/card2.png" alt="card">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
@@ -251,7 +260,7 @@
                     </div>
                 </div>
                 <div class="cards__item">
-                    <a class="cards__link" href="#">
+                    <a class="cards__link" href="product.html">
                         <img class="cards__img" src="./build/img/card3.png" alt="card">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
@@ -266,7 +275,7 @@
                     </div>
                 </div>
                 <div class="cards__item">
-                    <a class="cards__link" href="#">
+                    <a class="cards__link" href="product.html">
                         <img class="cards__img" src="./build/img/card4.png" alt="card">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
@@ -281,7 +290,7 @@
                     </div>
                 </div>
                 <div class="cards__item">
-                    <a class="cards__link" href="#">
+                    <a class="cards__link" href="product.html">
                         <img class="cards__img" src="./build/img/card5.png" alt="card">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
@@ -296,7 +305,7 @@
                     </div>
                 </div>
                 <div class="cards__item">
-                    <a class="cards__link" href="#">
+                    <a class="cards__link" href="product.html">
                         <img class="cards__img" src="./build/img/card6.png" alt="card">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
@@ -311,7 +320,7 @@
                     </div>
                 </div>
                 <div class="cards__item">
-                    <a class="cards__link" href="#">
+                    <a class="cards__link" href="product.html">
                         <img class="cards__img" src="./build/img/card7.png" alt="card">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
@@ -326,7 +335,7 @@
                     </div>
                 </div>
                 <div class="cards__item">
-                    <a class="cards__link" href="#">
+                    <a class="cards__link" href="product.html">
                         <img class="cards__img" src="./build/img/card8.png" alt="card">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
