--- a/product.html
+++ b/product.html
@@ -187,9 +187,10 @@
           <a class="product__banner__content__new__link" href="#">New Arrivals</a>
         </div>
         <div class="product__banner__content__list">
-          <a href="./index.html" class="product__banner__content__link">home/</a>
-          <a href="./index.html" class="product__banner__content__link">men/</a>
-          <a href="./index.html" class="product__banner__content__link">New Arrivals</a>
+          <a href="./index.html" class="product__banner__content__link">home /</a>
+          <a href="./index.html" class="product__banner__content__link">men /</a>
+          <a href="./index.html" class="product__banner__content__link product__banner__content__link__red">New
+            Arrivals</a>
         </div>
       </div>
     </div>
@@ -348,6 +349,134 @@
       </div>
     </div>
   </section>
+
+  <section class="product__bigbanner">
+    <div class="container product__bigbanner__container">
+      <div class="product__bigbanner__content">
+        <div class="bigbanner__right__content product__bigbanner__content__new">
+          <img class="bigbanner__right__img" src="./build/img/del.png" alt="delivery">
+          <div class="bigbanner__right__text product__bigbanner__content__text">
+            <p class="bigbanner__right__head product__bigbanner__content__head">Free Delivery</p>
+            <p class="bigbanner__right__paragraph product__bigbanner__content__paragraph">Worldwide delivery on all.
+              Authorit
+              tively
+              morph
+              next-generation innov tion with extensive
+              models.</p>
+          </div>
+        </div>
+        <div class="bigbanner__right__content product__bigbanner__content__new">
+          <img class="bigbanner__right__img" src="./build/img/sales.png" alt="sales">
+          <div class="bigbanner__right__text product__bigbanner__content__text">
+            <p class="bigbanner__right__head product__bigbanner__content__head">Sales & discounts</p>
+            <p class="bigbanner__right__paragraph product__bigbanner__content__paragraph">Worldwide delivery on all.
+              Authorit tively
+              morph
+              next-generation innov tion with extensive
+              models.</p>
+          </div>
+        </div>
+        <div class="bigbanner__right__content product__bigbanner__content__new">
+          <img class="bigbanner__right__img" src="./build/img/crown.png" alt="crown">
+          <div class="bigbanner__right__text product__bigbanner__content__text">
+            <p class="bigbanner__right__head product__bigbanner__content__head">Quality assurance</p>
+            <p class="bigbanner__right__paragraph product__bigbanner__content__paragraph">Worldwide delivery on all.
+              Authorit tively
+              morph
+              next-generation innov tion with extensive
+              models.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="feedback">
+    <div class="container feedback__item">
+      <figure class="feedback__left">
+        <img class="feedback__grid__img" src="./build/img/face.png" alt="face">
+        <figcaption class="feedback__grid__text">“Vestibulum quis porttitor dui! Quisque viverra nunc
+          mi,
+          a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”</figcaption>
+        <figcaption class="feedback__grid__sing1">Bin Burhan</figcaption>
+        <figcaption class="feedback__grid__sing2">Dhaka, Bd</figcaption>
+      </figure>
+      <div class="feedback__form">
+        <p class="feedback__form__heading">Subscribe</p>
+        <p class="feedback__form__text">FOR OUR NEWLETTER AND PROMOTION</p>
+        <form class="feedback__form__all" action="#">
+          <input class="feedback__form__mail" type="text" name="email" placeholder="Enter Your Email">
+          <button class="feedback__form__button">Subscribe</button>
+        </form>
+
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container footer__list">
+      <div class="footer__list1">
+        <div class="footer__item">
+          <div class="footer__item__logo">
+            <a class="" href="#"><img src="./build/img/logo.png" alt="logo"></a>
+            <a class="logo__text" href="#">BRAN<span class="other-color">D</span></a>
+          </div>
+          <p class="footer__item__text">Objectively transition extensive data rather than cross functional
+            solutions. Monotonectally
+            syndicate
+            multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array
+            of
+            processes and cross-unit partnerships. </p>
+          <p class="footer__item__text">Efficiently plagiarize 24/365 action items and focused infomediaries.
+            Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
+        </div>
+      </div>
+      <div class="footer__list2">
+        <div class="footer__item">
+          <h3 class="footer__heading">company</h3>
+          <a class="footer__link" href="#">home</a>
+          <a class="footer__link" href="#">shop</a>
+          <a class="footer__link" href="#">about</a>
+          <a class="footer__link" href="#">how it works</a>
+          <a class="footer__link" href="#">contact</a>
+        </div>
+      </div>
+      <div class="footer__list3">
+        <div class="footer__item">
+          <h3 class="footer__heading">information</h3>
+          <a class="footer__link" href="#">tearms & condition</a>
+          <a class="footer__link" href="#">privacy police</a>
+          <a class="footer__link" href="#">how to buy</a>
+          <a class="footer__link" href="#">how to sell</a>
+          <a class="footer__link" href="#">promotion</a>
+        </div>
+      </div>
+      <div class="footer__list4">
+        <div class="footer__item">
+          <h3 class="footer__heading">shop category</h3>
+          <a class="footer__link" href="#">men</a>
+          <a class="footer__link" href="#">women</a>
+          <a class="footer__link" href="#">child</a>
+          <a class="footer__link" href="#">apparel</a>
+          <a class="footer__link" href="#">brows all</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer__finish">
+      <div class="container footer__finish__one">
+        <div class="footer__finish__social">
+          <p class="footer__finish__social__left">
+            © 2017 Brand All Rights Reserved.
+          </p>
+          <a href="#" class="footer__finish__social__link"><img src="build/img/facebook.png" alt="facebook"></a>
+          <a href="#" class="footer__finish__social__link"><img src="build/img/twit.png" alt="twitter"></a>
+          <a href="#" class="footer__finish__social__link"><img src="build/img/in.png" alt=""></a>
+          <a href="#" class="footer__finish__social__link"><img src="build/img/print.png" alt=""></a>
+          <a href="#" class="footer__finish__social__link"><img src="build/img/google.png" alt=""></a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
