--- a/product.html
+++ b/product.html
@@ -209,6 +209,21 @@
           </ul>
         </div>
         <div class="product__promo__price">
+          <div class="product__promo__price__filter">
+            <div class="product__promo__price__filter__trending">
+              <p class="product__promo__price__filter__paragraph">Trending now</p>
+              a.
+            </div>
+            <div class="product__promo__price__filter__size">
+              <p class="product__promo__price__filter__paragraph">size</p>
+            </div>
+            <div class="product__promo__price__filter__price">
+              <p class="product__promo__price__filter__paragraph">price</p>
+            </div>
+            <div class="product__promo__price__filter__sort">
+
+            </div>
+          </div>
           <div class="cards__item">
             <a class="cards__link" href="product.html">
               <img class="cards__img" src="./build/img/card9.png" alt="card">
@@ -468,15 +483,18 @@
           <p class="footer__finish__social__left">
             © 2017 Brand All Rights Reserved.
           </p>
-          <a href="#" class="footer__finish__social__link"><img src="build/img/facebook.png" alt="facebook"></a>
-          <a href="#" class="footer__finish__social__link"><img src="build/img/twit.png" alt="twitter"></a>
-          <a href="#" class="footer__finish__social__link"><img src="build/img/in.png" alt=""></a>
-          <a href="#" class="footer__finish__social__link"><img src="build/img/print.png" alt=""></a>
-          <a href="#" class="footer__finish__social__link"><img src="build/img/google.png" alt=""></a>
+          <div class="footer__finish__social__right">
+            <a href="#" class="footer__finish__social__link"><img src="build/img/facebook.png" alt="facebook"></a>
+            <a href="#" class="footer__finish__social__link"><img src="build/img/twit.png" alt="twitter"></a>
+            <a href="#" class="footer__finish__social__link"><img src="build/img/in.png" alt=""></a>
+            <a href="#" class="footer__finish__social__link"><img src="build/img/print.png" alt=""></a>
+            <a href="#" class="footer__finish__social__link"><img src="build/img/google.png" alt=""></a>
+          </div>
         </div>
       </div>
     </div>
   </footer>
+
 
 </body>
 
