--- a/index.html
+++ b/index.html
@@ -478,12 +478,15 @@
                     <p class="footer__finish__social__left">
                         © 2017 Brand All Rights Reserved.
                     </p>
-                    <a href="#" class="footer__finish__social__link"><img src="build/img/facebook.png"
-                            alt="facebook"></a>
-                    <a href="#" class="footer__finish__social__link"><img src="build/img/twit.png" alt="twitter"></a>
-                    <a href="#" class="footer__finish__social__link"><img src="build/img/in.png" alt=""></a>
-                    <a href="#" class="footer__finish__social__link"><img src="build/img/print.png" alt=""></a>
-                    <a href="#" class="footer__finish__social__link"><img src="build/img/google.png" alt=""></a>
+                    <div class="footer__finish__social__right">
+                        <a href="#" class="footer__finish__social__link"><img src="build/img/facebook.png"
+                                alt="facebook"></a>
+                        <a href="#" class="footer__finish__social__link"><img src="build/img/twit.png"
+                                alt="twitter"></a>
+                        <a href="#" class="footer__finish__social__link"><img src="build/img/in.png" alt=""></a>
+                        <a href="#" class="footer__finish__social__link"><img src="build/img/print.png" alt=""></a>
+                        <a href="#" class="footer__finish__social__link"><img src="build/img/google.png" alt=""></a>
+                    </div>
                 </div>
             </div>
         </div>
